crates/hird-parse/tests/snapshots/smoke__expr_list_empty.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = []\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    LIST_LIT
      WHITESPACE " "
      L_BRACKET "["
      R_BRACKET "]"
