crates/hird-parse/tests/snapshots/smoke__expr_logical_and.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = a && b\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    BIN_EXPR
      WHITESPACE " "
      IDENT "a"
      WHITESPACE " "
      ANDAND "&&"
      WHITESPACE " "
      IDENT "b"
