crates/hird-parse/tests/snapshots/smoke__expr_logical_looser_than_relational.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = a == b && c < d\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    BIN_EXPR
      BIN_EXPR
        WHITESPACE " "
        IDENT "a"
        WHITESPACE " "
        EQ_EQ "=="
        WHITESPACE " "
        IDENT "b"
      WHITESPACE " "
      ANDAND "&&"
      BIN_EXPR
        WHITESPACE " "
        IDENT "c"
        WHITESPACE " "
        LT "<"
        WHITESPACE " "
        IDENT "d"
