crates/hird-parse/tests/snapshots/smoke__expr_logical_precedence.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = a || b && c\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    BIN_EXPR
      WHITESPACE " "
      IDENT "a"
      WHITESPACE " "
      OROR "||"
      BIN_EXPR
        WHITESPACE " "
        IDENT "b"
        WHITESPACE " "
        ANDAND "&&"
        WHITESPACE " "
        IDENT "c"
