crates/hird-parse/tests/snapshots/smoke__expr_match_ctor_vs_binding.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = match x { None -> 0, y -> y }\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    MATCH_EXPR
      WHITESPACE " "
      MATCH_KW "match"
      WHITESPACE " "
      IDENT "x"
      WHITESPACE " "
      L_BRACE "{"
      MATCH_ARM
        CONSTRUCTOR_PAT
          WHITESPACE " "
          IDENT "None"
        WHITESPACE " "
        ARROW "->"
        WHITESPACE " "
        INT "0"
      COMMA ","
      MATCH_ARM
        BIND_PAT
          WHITESPACE " "
          IDENT "y"
        WHITESPACE " "
        ARROW "->"
        WHITESPACE " "
        IDENT "y"
      WHITESPACE " "
      R_BRACE "}"
